package com.leng.analizador.analyzer.controller;

public class ErrorController {

    public boolean getErrors() {
        return false;
    }
    
}
