package com.leng.analizador.analyzer.controller;

import com.leng.analizador.analyzer.models.SymbolTable;

public class SymbolTableController {

    public static SymbolTable getSymbolTable() {
        return null;
    }
    
}
