package com.leng.analizador.analyzer.controller.parser;

public enum ParserFactory {
    JSFINITAUTOMAT
    ;

    public Parseable getParser() {
        return null;
    }
    
}
