package com.leng.analizador.analyzer.controller.scanner;

public enum ScannerFactory {
    JSSTACKAUTOMAT
    ;

    public Scannable getScanner() {
        return null;
    }
    
}
