package com.leng.analizador.analyzer.models;

public class SyntaxTree {
    
}
