package com.leng.analizador.analyzer.models;

public class Token {

    public Token(Object tokenType, int line, int column, String path, String string) {
    }
    
}
